--- a/textracting/150sample.ipynb
+++ b/textracting/150sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "(35, 30, 25, 90)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,22 +45,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reps = []\n",
+    "reps.extend(pet)\n",
+    "reps.extend(mineral)\n",
+    "reps.extend(coal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reps.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'values'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-f173f18324d1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcoal\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'values'"
-     ]
+     "data": {
+      "text/plain": [
+       "[167,\n",
+       " 339,\n",
+       " 504,\n",
+       " 801,\n",
+       " 909,\n",
+       " 1664,\n",
+       " 1799,\n",
+       " 2646,\n",
+       " 3050,\n",
+       " 3063,\n",
+       " 3354,\n",
+       " 3769,\n",
+       " 5992,\n",
+       " 14142,\n",
+       " 21166,\n",
+       " 23455,\n",
+       " 25335,\n",
+       " 27932,\n",
+       " 28193,\n",
+       " 28822,\n",
+       " 29120,\n",
+       " 29695,\n",
+       " 30320,\n",
+       " 30408,\n",
+       " 30479,\n",
+       " 30774,\n",
+       " 31511,\n",
+       " 31931,\n",
+       " 32730,\n",
+       " 33720,\n",
+       " 33931,\n",
+       " 34372,\n",
+       " 35132,\n",
+       " 35152,\n",
+       " 35454,\n",
+       " 35500,\n",
+       " 36675,\n",
+       " 37802,\n",
+       " 38276,\n",
+       " 40303,\n",
+       " 40923,\n",
+       " 41674,\n",
+       " 41720,\n",
+       " 41932,\n",
+       " 42688,\n",
+       " 44448,\n",
+       " 44603,\n",
+       " 44638,\n",
+       " 46519,\n",
+       " 46522,\n",
+       " 47465,\n",
+       " 47468,\n",
+       " 48384,\n",
+       " 48406,\n",
+       " 48777,\n",
+       " 48798,\n",
+       " 49264,\n",
+       " 50115,\n",
+       " 50481,\n",
+       " 51141,\n",
+       " 51316,\n",
+       " 51800,\n",
+       " 51979,\n",
+       " 53382,\n",
+       " 55076,\n",
+       " 55454,\n",
+       " 55535,\n",
+       " 55636,\n",
+       " 63981,\n",
+       " 64268,\n",
+       " 64479,\n",
+       " 64818,\n",
+       " 65455,\n",
+       " 68354,\n",
+       " 76875,\n",
+       " 81257,\n",
+       " 81616,\n",
+       " 81735,\n",
+       " 81763,\n",
+       " 83042,\n",
+       " 85174,\n",
+       " 89489,\n",
+       " 90461,\n",
+       " 94124,\n",
+       " 95348,\n",
+       " 97152,\n",
+       " 99356,\n",
+       " 99683,\n",
+       " 100291,\n",
+       " 106092]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "reps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reps = [int(r) for r in set(reps)]"
+   ]
   },
   {
    "cell_type": "code",
