Moved notebooks to better location. Had trouble doing this before because importing didn't work - fixed by appending '../' to sys path

--- a/textracting/borehole/Comparing table extraction between different services.ipynb
+++ b/textracting/borehole/Comparing table extraction between different services.ipynb
@@ -13,12 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from borehole_tables import get_tables, save_tables\n",
-    "from settings import get_tables_file\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "from borehole.tables import get_tables, save_tables\n",
+    "from paths import get_tables_file\n",
     "import pandas as pd\n",
     "\n",
     "docs_path = 'C:/Users/andraszeka/OneDrive - ITP (Queensland Government)/textract_result/qutsample'\n",
