--- a/textracting/borehole/Borehole Extraction Demo.ipynb
+++ b/textracting/borehole/Borehole Extraction Demo.ipynb
@@ -20,6 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../')\n",
     "from borehole import extraction\n",
     "\n",
     "extraction.init()"
